sre-arena-deathstar/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-backend-arena
  namespace: sre
spec:
  type: ClusterIP
  selector:
    app: sre-backend-arena
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
