sre-arena-deathstar/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-backend-arena
  namespace: sre
spec:
  ingressClassName: nginx
  rules:
  - host: sre-api.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sre-backend-arena
            port:
              number: 80
